    message recordingPayload {
        optional string recFilename     = 1;
        optional uint32 startStop       = 2;
    }